--- a/src/pages/testing/testCreation/completeTest/completeTest.html
+++ b/src/pages/testing/testCreation/completeTest/completeTest.html
@@ -13,7 +13,7 @@
       <p>{{ vehicle.type }}</p>
       <button ion-button item-end (click)="openVehicleDetails()">Vehicle details</button>
     </ion-item >
-    <ion-item>
+    <ion-item *ngIf="vehicle.type != 'Trailer'">
         <ion-label>Odometer reading</ion-label>
         <ion-input type="number" class="odometer-reading" placeholder="Enter value" [(ngModel)]="vehicleTest.odometerReading" (ngModelChange)="vehicleTest.odometerReading = convertToNumber($event)"></ion-input>
         <ion-select interface="action-sheet" [(ngModel)]="vehicleTest.odometerMetric">
