MVP-12 - Refactor CSS

--- a/src/pages/atf/atf-home/atf-home.html
+++ b/src/pages/atf/atf-home/atf-home.html
@@ -1,7 +1,6 @@
 <ion-content padding class="atf-home">
     <div class="content-body">
-        <div class="logo">
-            <!-- <ion-icon name="construct"></ion-icon> -->
+        <div class="logo" text-center>
             <ion-img src="./assets/logo.png" width="322" height="27"></ion-img>
             <!-- Driver & Vehicle Standards Agency -->
         </div>
