CVSB-139 - implement add-defect and unit tests

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,11 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
-
+  <!--used for refresh to navigate to the homeScreen-->
   <script>
     location.hash = '';
   </script>
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
