--- a/src/pages/testing/test-creation/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/test-creation/vehicle-details/vehicle-details.html
@@ -5,8 +5,8 @@
       <span *ngIf="vehicle.type == 'Trailer'">Trailer details</span>
     </ion-title>
       <ion-buttons end *ngIf="testReport">
-            <button ion-button (click)="refuseVehicle()">
-                Refuse vehicle
+            <button ion-button (click)="goToPreparerPage()">
+                Confirm
             </button>
         </ion-buttons>
   </ion-navbar>
