CVSB-112 - Search for Defects

--- a/src/pages/atf/atf-search/atf-search.html
+++ b/src/pages/atf/atf-search/atf-search.html
@@ -9,7 +9,7 @@
                    [(ngModel)]="searchVal"
                    [showCancelButton]="true"
                    [cancelButtonText]="'Cancel'"
-                   [placeholder]="'Search for ATF name, address or P-number'"
+                   placeholder="Search for ATF name, address or P-number"
                    #searchBar>
     </ion-searchbar>
   </ion-toolbar>
