--- a/src/pages/testing/defects/add-defect/add-defect.html
+++ b/src/pages/testing/defects/add-defect/add-defect.html
@@ -1,11 +1,17 @@
-<ion-header>
+<ion-header transforming-searchBar [searchBarElemRef]="searchBar">
   <ion-navbar>
     <ion-title>
-      Defect description
+      Defect item
     </ion-title>
   </ion-navbar>
   <ion-toolbar>
-    <ion-searchbar [(ngModel)]="term" placeholder="Search for a defect category or IM number"></ion-searchbar>
+    <ion-searchbar (ionInput)="searchList($event)"
+                   [(ngModel)]="searchVal"
+                   [showCancelButton]="true"
+                   [cancelButtonText]="'Cancel'"
+                   placeholder="Search for a defect category or IM number"
+                   #searchBar>
+    </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +21,7 @@
       {{ category.imNumber }}.{{ item.itemNumber }} {{ item.itemDescription }}
     </ion-item-divider>
     <ion-item detail-none class="defect-details"
-              *ngFor="let deficiency of item.deficiencies | searchBy: term"
+              *ngFor="let deficiency of filteredDeficiencies | byVehicleType: vehicleType"
               (click)="selectDeficiency(deficiency)">
       <span>
           <h3>
