CVSB-141 Resolved the comments on PR

--- a/src/pages/testing/defects/add-defect/add-defect.html
+++ b/src/pages/testing/defects/add-defect/add-defect.html
@@ -22,7 +22,7 @@
             {{deficiency.ref}}
             <ion-badge item-end text-uppercase
                        [color]="defectsService.getBadgeColor(deficiency.deficiencyCategory)"
-                       [ngStyle]="{'color':deficiency.deficiencyCategory === 'Minor' ? 'black' : 'white' }">
+                       [ngClass]="{'badge__text-black': deficiency.deficiencyCategory === 'Minor'}">
               {{ deficiency.deficiencyCategory }}
             </ion-badge>
           </h3>
