--- a/src/pages/atf/atf-issue/atf-issue.html
+++ b/src/pages/atf/atf-issue/atf-issue.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
+    <ion-title margin-left>
       ATF Issue
     </ion-title>
     <ion-buttons end>
