--- a/src/pages/testing/defects/add-defect-category/add-defect-category.html
+++ b/src/pages/testing/defects/add-defect-category/add-defect-category.html
@@ -1,6 +1,6 @@
 <ion-header transforming-searchBar [searchBarElemRef]="searchBar">
   <ion-navbar>
-    <ion-title>
+    <ion-title margin-left>
       Record defect
     </ion-title>
   </ion-navbar>
