--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
+    <ion-title margin-left>
       Defect details
     </ion-title>
     <ion-buttons end>
