--- a/src/pages/testing/test-creation/add-preparer/add-preparer.html
+++ b/src/pages/testing/test-creation/add-preparer/add-preparer.html
@@ -6,7 +6,7 @@
         Vehicle details
       </button>
     </ion-buttons>
-    <ion-title>Select preparer</ion-title>
+    <ion-title margin-left>Select preparer</ion-title>
   </ion-navbar>
   <ion-toolbar>
     <ion-searchbar #searchBar
