--- a/src/pages/testing/test-creation/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/test-creation/vehicle-lookup/vehicle-lookup.html
@@ -5,7 +5,7 @@
                 Close
             </button>
         </ion-buttons>
-        <ion-title>
+        <ion-title margin-left>
             Identify Vehicle
         </ion-title>
     </ion-navbar>
