--- a/src/pages/testing/test-submitted/print/print.html
+++ b/src/pages/testing/test-submitted/print/print.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>
+        <ion-title margin-left>
             Print
         </ion-title>
     </ion-navbar>
