--- a/src/pages/testing/test-submitted/test-submitted.html
+++ b/src/pages/testing/test-submitted/test-submitted.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
-    <ion-title>
+    <ion-title margin-left>
       Test submitted
     </ion-title>
     <ion-buttons end>
