--- a/src/pages/atf/atf-details/atf-details.html
+++ b/src/pages/atf/atf-details/atf-details.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>
+        <ion-title margin-left>
         ATF Details
         </ion-title>
         <ion-buttons end>
