--- a/src/pages/atf/atf-search/atf-search.html
+++ b/src/pages/atf/atf-search/atf-search.html
@@ -1,6 +1,6 @@
 <ion-header transforming-searchBar [searchBarElemRef]="searchBar">
   <ion-navbar>
-    <ion-title>
+    <ion-title margin-left>
       Search for an ATF
     </ion-title>
   </ion-navbar>
