--- a/src/pages/testing/defects/add-defect-item/add-defect-item.html
+++ b/src/pages/testing/defects/add-defect-item/add-defect-item.html
@@ -1,6 +1,6 @@
 <ion-header transforming-searchBar [searchBarElemRef]="searchBar">
   <ion-navbar>
-    <ion-title>
+    <ion-title margin-left>
       Defect item
     </ion-title>
   </ion-navbar>
