--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar hideBackButton="true">
-        <ion-title>
+        <ion-title margin-left>
             Test
         </ion-title>
         <ion-buttons start>
