--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -5,7 +5,7 @@
                 End visit
             </button>
         </ion-buttons>
-        <ion-title>
+        <ion-title margin-left>
             Site Visit
         </ion-title>
     </ion-navbar>
