CVSB-365 - back functionality to change the vehicle

--- a/src/pages/testing/test-creation/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/test-creation/vehicle-lookup/vehicle-lookup.html
@@ -10,7 +10,7 @@
         </ion-title>
     </ion-navbar>
     <ion-toolbar>
-        <ion-searchbar placeholder="Enter registration or VIN" (search)="searchVehicle($event)"></ion-searchbar>
+        <ion-searchbar [(ngModel)]="searchVal" placeholder="Enter registration or VIN" (search)="searchVehicle($event)"></ion-searchbar>
     </ion-toolbar>
 </ion-header>
 
